extract class : step_clickclick - game - EffectView

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -768,6 +768,9 @@
     <ClCompile Include="..\Classes\step_clickclick_animation_ListScene.cpp">
       <Filter>src\scene\step_02_clickclick\animation</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_clickclick_game_EffectView.cpp">
+      <Filter>src\scene\step_02_clickclick\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1390,6 +1393,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_clickclick_animation_ListScene.h">
       <Filter>src\scene\step_02_clickclick\animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_clickclick_game_EffectView.h">
+      <Filter>src\scene\step_02_clickclick\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
