--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -174,6 +174,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\shader_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_SimpleTestScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Block.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_EffectView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_test_BlockScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_BlockView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Processor.cpp" />
@@ -374,6 +375,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\shader_practice_RootScene.h" />
     <ClInclude Include="..\Classes\shader_practice_SimpleTestScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Block.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_EffectView.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_test_BlockScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_BlockView.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Processor.h" />
