--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -178,6 +178,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_clickclick_game_test_BlockScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_BlockView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_Processor.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_test_EffectViewScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_chipmunk_ContactScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_chipmunk_GravityScene.cpp" />
     <ClCompile Include="..\Classes\step_defender_chipmunk_MoveScene.cpp" />
@@ -379,6 +380,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_clickclick_game_test_BlockScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_BlockView.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Processor.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_test_EffectViewScene.h" />
     <ClInclude Include="..\Classes\step_defender_chipmunk_ContactScene.h" />
     <ClInclude Include="..\Classes\step_defender_chipmunk_GravityScene.h" />
     <ClInclude Include="..\Classes\step_defender_chipmunk_MoveScene.h" />
