--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -210,6 +210,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_mole_game_TargetManager.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_fileutil_PathScene.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_fileutil_GenerateNDeleteScene.cpp" />
+    <ClCompile Include="..\Classes\step_pathfinder_game_PlayerNode.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_game_test_PlayerMoveScene.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_game_test_TerrainViewerScene.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_draw_node_CircleScene.cpp" />
@@ -419,6 +420,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_mole_game_TargetManager.h" />
     <ClInclude Include="..\Classes\step_pathfinder_fileutil_PathScene.h" />
     <ClInclude Include="..\Classes\step_pathfinder_fileutil_GenerateNDeleteScene.h" />
+    <ClInclude Include="..\Classes\step_pathfinder_game_PlayerNode.h" />
     <ClInclude Include="..\Classes\step_pathfinder_game_test_PlayerMoveScene.h" />
     <ClInclude Include="..\Classes\step_pathfinder_game_test_TerrainViewerScene.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_draw_node_CircleScene.h" />
