add scene : step_typetype - sprite - BasicScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -328,6 +328,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_clickclick_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sprite_AnchorPointScene.cpp" />
+    <ClCompile Include="..\Classes\step_typetype_sprite_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sprite_TextureTypeScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_ScrollViewGeneratorScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_layout_test_ChangeSequenceScene.cpp" />
@@ -544,6 +545,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_clickclick_RootScene.h" />
     <ClInclude Include="..\Classes\step_typetype_RootScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sprite_AnchorPointScene.h" />
+    <ClInclude Include="..\Classes\step_typetype_sprite_BasicScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sprite_TextureTypeScene.h" />
     <ClInclude Include="..\Classes\ui_practice_ScrollViewGeneratorScene.h" />
     <ClInclude Include="..\Classes\ui_practice_layout_test_ChangeSequenceScene.h" />
