add scene : step_typetype - sprite - AliasScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -795,6 +795,9 @@
     <ClCompile Include="..\Classes\step_typetype_sprite_BasicScene.cpp">
       <Filter>src\scene\step_01_typetype\sprite</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_typetype_sprite_AliasScene.cpp">
+      <Filter>src\scene\step_01_typetype\sprite</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1440,6 +1443,9 @@
       <Filter>src\scene\step_0x_flipflip\sprite</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_typetype_sprite_BasicScene.h">
+      <Filter>src\scene\step_01_typetype\sprite</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_typetype_sprite_AliasScene.h">
       <Filter>src\scene\step_01_typetype\sprite</Filter>
     </ClInclude>
   </ItemGroup>
