--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -184,6 +184,9 @@
     <Filter Include="src\scene\step_02_flipflip\sprite">
       <UniqueIdentifier>{c6391555-f23d-45ca-80ec-8735b232aeab}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step_02_flipflip\plist">
+      <UniqueIdentifier>{9bcf0fbe-b47a-4fa8-9475-7e31fbbee7ee}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -792,11 +795,11 @@
     <ClCompile Include="..\Classes\step_typetype_sprite_BasicScene.cpp">
       <Filter>src\scene\step_01_typetype\sprite</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\step_flipflip_sprite_TextureTypeScene.cpp">
-      <Filter>src\scene\step_02_flipflip\sprite</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\step_flipflip_sprite_AliasScene.cpp">
       <Filter>src\scene\step_02_flipflip\sprite</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_sprite_TextureTypeScene.cpp">
+      <Filter>src\scene\step_02_flipflip\plist</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1442,11 +1445,11 @@
     <ClInclude Include="..\Classes\step_typetype_sprite_BasicScene.h">
       <Filter>src\scene\step_01_typetype\sprite</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\step_flipflip_sprite_TextureTypeScene.h">
-      <Filter>src\scene\step_02_flipflip\sprite</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\step_flipflip_sprite_AliasScene.h">
       <Filter>src\scene\step_02_flipflip\sprite</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_sprite_TextureTypeScene.h">
+      <Filter>src\scene\step_02_flipflip\plist</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
