--- a/cocos2dx_playground/Resources/textures/step_flipflip/step_flipflip_textures.plist
+++ b/cocos2dx_playground/Resources/textures/step_flipflip/step_flipflip_textures.plist
@@ -4,7 +4,7 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>step_flipflip_dummy_01.png</key>
+            <key>step_flipflip_card_back_0.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -19,7 +19,7 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>step_flipflip_dummy_02.png</key>
+            <key>step_flipflip_card_front_0.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -31,6 +31,66 @@
                 <string>{26,40}</string>
                 <key>textureRect</key>
                 <string>{{30,2},{26,40}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_card_front_1.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{26,40}</string>
+                <key>spriteSourceSize</key>
+                <string>{26,40}</string>
+                <key>textureRect</key>
+                <string>{{2,44},{26,40}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_card_front_2.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{26,40}</string>
+                <key>spriteSourceSize</key>
+                <string>{26,40}</string>
+                <key>textureRect</key>
+                <string>{{30,44},{26,40}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_card_front_3.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{26,40}</string>
+                <key>spriteSourceSize</key>
+                <string>{26,40}</string>
+                <key>textureRect</key>
+                <string>{{2,86},{26,40}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_card_front_4.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{26,40}</string>
+                <key>spriteSourceSize</key>
+                <string>{26,40}</string>
+                <key>textureRect</key>
+                <string>{{30,86},{26,40}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -46,9 +106,9 @@
             <key>realTextureFileName</key>
             <string>step_flipflip_textures.png</string>
             <key>size</key>
-            <string>{64,64}</string>
+            <string>{64,128}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:71992f8ee14ef7540d71e673b88858c7:03a5e30e22a41d997256ae6cdf38210d:a55b241e3d14adfbcdb6355af10c05cb$</string>
+            <string>$TexturePacker:SmartUpdate:c6e2afe56aea4bbd02cacce585bd7f05:006966ed30e773fb255038ae24d323df:a55b241e3d14adfbcdb6355af10c05cb$</string>
             <key>textureFileName</key>
             <string>step_flipflip_textures.png</string>
         </dict>
