--- a/cocos2dx_playground/Resources/textures/step_flipflip/step_flipflip_textures.plist
+++ b/cocos2dx_playground/Resources/textures/step_flipflip/step_flipflip_textures.plist
@@ -94,6 +94,96 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
+            <key>step_flipflip_dummy4plist_back_0.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{78,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{78,120}</string>
+                <key>textureRect</key>
+                <string>{{2,246},{78,120}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_dummy4plist_front_0.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{78,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{78,120}</string>
+                <key>textureRect</key>
+                <string>{{82,246},{78,120}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_dummy4plist_front_1.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{78,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{78,120}</string>
+                <key>textureRect</key>
+                <string>{{162,246},{78,120}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_dummy4plist_front_2.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{78,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{78,120}</string>
+                <key>textureRect</key>
+                <string>{{2,368},{78,120}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_dummy4plist_front_3.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{78,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{78,120}</string>
+                <key>textureRect</key>
+                <string>{{82,368},{78,120}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>step_flipflip_dummy4plist_front_4.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{78,120}</string>
+                <key>spriteSourceSize</key>
+                <string>{78,120}</string>
+                <key>textureRect</key>
+                <string>{{162,368},{78,120}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -106,9 +196,9 @@
             <key>realTextureFileName</key>
             <string>step_flipflip_textures.png</string>
             <key>size</key>
-            <string>{256,256}</string>
+            <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:25562bb1c1f53828212a43768cb14cee:f055c0c4142ece8636be6005f2b9de5e:a55b241e3d14adfbcdb6355af10c05cb$</string>
+            <string>$TexturePacker:SmartUpdate:c0c7b88f74db6371f8c7c2c48a17ec5c:34672a6ebbd3739086d8547e77c307f9:a55b241e3d14adfbcdb6355af10c05cb$</string>
             <key>textureFileName</key>
             <string>step_flipflip_textures.png</string>
         </dict>
