--- a/cocos2dx_playground/Resources/textures/step_flipflip/step_flipflip_dummy_textures.plist
+++ b/cocos2dx_playground/Resources/textures/step_flipflip/step_flipflip_dummy_textures.plist
@@ -194,13 +194,13 @@
             <key>premultiplyAlpha</key>
             <false/>
             <key>realTextureFileName</key>
-            <string>step_flipflip_textures.png</string>
+            <string>step_flipflip_dummy_textures.png</string>
             <key>size</key>
             <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:c0c7b88f74db6371f8c7c2c48a17ec5c:34672a6ebbd3739086d8547e77c307f9:a55b241e3d14adfbcdb6355af10c05cb$</string>
+            <string>$TexturePacker:SmartUpdate:65118387d3d2120bfb10c9ccd295dacf:34672a6ebbd3739086d8547e77c307f9:e70bf94b712d59d97bf04fe29d444d5a$</string>
             <key>textureFileName</key>
-            <string>step_flipflip_textures.png</string>
+            <string>step_flipflip_dummy_textures.png</string>
         </dict>
     </dict>
 </plist>
