add scene : step_flipflip - texture - PList4ThisProject

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -194,6 +194,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_defender_tool_TileSheetNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_scale_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_texture_PList4ThisProjectScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_AnimationComponent.cpp" />
     <ClCompile Include="..\Classes\cpg_Animation_Index.cpp" />
     <ClCompile Include="..\Classes\step_defender_RootScene.cpp" />
@@ -405,6 +406,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_defender_tool_TileSheetNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_RootScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_scale_BasicScene.h" />
+    <ClInclude Include="..\Classes\step_flipflip_texture_PList4ThisProjectScene.h" />
     <ClInclude Include="..\Classes\step_mole_AnimationComponent.h" />
     <ClInclude Include="..\Classes\cpg_Animation_Index.h" />
     <ClInclude Include="..\Classes\cpg_Animation_Info.h" />
