--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -190,6 +190,9 @@
     <Filter Include="src\scene\step_02_flipflip\scale">
       <UniqueIdentifier>{bb05c989-6286-4be8-8ab7-05b677e54414}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step_02_flipflip\game">
+      <UniqueIdentifier>{7271943b-0c3b-4e26-94d9-0fdfc5f60af9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -809,6 +812,12 @@
     </ClCompile>
     <ClCompile Include="..\Classes\step_flipflip_texture_PList4ThisProjectScene.cpp">
       <Filter>src\scene\step_02_flipflip\texture</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_game_test_CardViewScene.cpp">
+      <Filter>src\scene\step_02_flipflip\game_test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\step_flipflip_game_CardViewNode.cpp">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1465,6 +1474,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_flipflip_texture_PList4ThisProjectScene.h">
       <Filter>src\scene\step_02_flipflip\texture</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_game_test_CardViewScene.h">
+      <Filter>src\scene\step_02_flipflip\game_test</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_flipflip_game_CardViewNode.h">
+      <Filter>src\scene\step_02_flipflip\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
