add scene : step_flipflip - opacity - BasicScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -195,6 +195,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_flipflip_action_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_CardViewNode.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_game_test_CardViewScene.cpp" />
+    <ClCompile Include="..\Classes\step_flipflip_opacity_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_scale_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_flipflip_texture_PList4ThisProjectScene.cpp" />
@@ -409,6 +410,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_flipflip_action_BasicScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_CardViewNode.h" />
     <ClInclude Include="..\Classes\step_flipflip_game_test_CardViewScene.h" />
+    <ClInclude Include="..\Classes\step_flipflip_opacity_BasicScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_RootScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_scale_BasicScene.h" />
     <ClInclude Include="..\Classes\step_flipflip_texture_PList4ThisProjectScene.h" />
