--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -202,6 +202,9 @@
     <Filter Include="src\scene\step_02_flipflip\sprite_frame">
       <UniqueIdentifier>{a70260a5-6b93-4f29-b053-f8624067d4d2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\scene\step99\tool">
+      <UniqueIdentifier>{c7283c4e-210a-420f-a875-42d985335828}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -839,6 +842,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\step_flipflip_game_test_StageViewScene.cpp">
       <Filter>src\scene\step_02_flipflip\game_test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\tool_practice_TileSheetTestScene.cpp">
+      <Filter>src\scene\step99\tool</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1513,6 +1519,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_flipflip_game_test_StageViewScene.h">
       <Filter>src\scene\step_02_flipflip\game_test</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\tool_practice_TileSheetTestScene.h">
+      <Filter>src\scene\step99\tool</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
