--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -849,6 +849,9 @@
     <ClCompile Include="..\Classes\tool_practice_TileSheetTestConfiguration.cpp">
       <Filter>src\scene\step99\tool</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cpg_Position2GridIndexConverter.cpp">
+      <Filter>src\cpg</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1528,6 +1531,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\tool_practice_TileSheetTestConfiguration.h">
       <Filter>src\scene\step99\tool</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_Position2GridIndexConverter.h">
+      <Filter>src\cpg</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
